--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
 <!-- İkinci Başlık Bitiş -->
 <!-- Paragraflar başlangıç -->
 <p>Yeni şeyler öğrenerek kendimi geliştirmekten ve web tasarım ile ilgilenmekten hoşlanıyorum. Front-end patikasında zevkle ilerliyorum</p>
-<p>Bulduğum tüm fırsatlarda kitap okumaya ve yabancı dilimi geliştirmeye özen gösteriyorum.</p>
+<p>Bulduğum tüm fırsatlarda kitap okumaya ve yabancı dilimi geliştirmeye özen gösteriyorum..</p>
