--- a/index.html
+++ b/index.html
@@ -7,3 +7,28 @@
 <!-- Paragraflar başlangıç -->
 <p>Yeni şeyler öğrenerek kendimi geliştirmekten ve web tasarım ile ilgilenmekten hoşlanıyorum. Front-end patikasında zevkle ilerliyorum</p>
 <p>Bulduğum tüm fırsatlarda kitap okumaya ve yabancı dilimi geliştirmeye özen gösteriyorum..</p>
+<img  src="images/kütüphane.jpg" alt="Kutuphane Fotografi">
+<p><strong><em>Kitaplar her zaman en iyi yol göstericilerdir.</em></strong></p>
+<ol>
+    <li>Kitaplar
+        <ul>
+            <li><a href="https://www.goodreads.com/book/show/11451892-k-k-prens?ac=1&from_search=true&qid=Xb64GYSnzK&rank=1" target="_blank">Küçük Prens</a></li>
+            <li><a href="https://www.goodreads.com/book/show/41879768-i-yi-aile-yoktur?ac=1&from_search=true&qid=NkuKUpD8ib&rank=1"target="_blank">İyi Aile Yoktur</a> </li>
+            <li><a href="https://www.goodreads.com/book/show/44767458-dune?from_search=true&from_srp=true&qid=BAcBjBfVG1&rank=1" target="_blank">Dune Gezegeni</a> </li>
+        </ul>
+    </li>
+    <li>Filmler
+        <ul>
+            <li><a href="https://www.imdb.com/title/tt0304141/" target="_blank"> Harry Potter ve Azkaban Tutsağı</a> </li>
+            <li><a href="https://www.imdb.com/title/tt0240890/?ref_=fn_al_tt_1" target="_blank">Serendipity</a></li>
+            <li><a href="https://www.imdb.com/title/tt0914798/?ref_=fn_al_tt_1" target="_blank">Çizgili Pijamalı Çocuk</a></li>
+        </ul>
+    </li>
+    <li>Diziler
+        <ul>
+            <li>How I Met Your Mother</li>
+            <li>Chuck</li>
+            <li>Supernatural</li>
+        </ul>
+    </li>
+</ol>
