--- a/çikolata kupleri/ödev3.html
+++ b/çikolata kupleri/ödev3.html
@@ -9,9 +9,8 @@
        body{monospace, sans-serif;
     font-size: 12px;
     font-weight: normal;
-    text-align: match-parent;
-    background-color: #d2b48c, initial-scale=1.0}
-
+    text-align: justify;
+    background-color: #d2b48c;, initial-scale=1.0}
   
 /* ul{
 text-align:center;
