--- a/çikolata kupleri/ödev3.html
+++ b/çikolata kupleri/ödev3.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width= font-family: Verdana, ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
    <style>
-       body{monospace, sans-serif;
+       
+       body{
+    font-family: monospace, sans-serif;
     font-size: 12px;
     font-weight: normal;
     text-align: justify;
-    background-color: #d2b48c;, initial-scale=1.0}
+    background-color: #d2b48c; }
   
 /* ul{
 text-align:center;
